--- a/Savio/SACreateSavingPlanViewController/SavingCategoryTableViewCell.xib
+++ b/Savio/SACreateSavingPlanViewController/SavingCategoryTableViewCell.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -29,17 +29,12 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="obs-re-Qcr">
-                        <rect key="frame" x="75" y="32" width="237" height="35"/>
+                        <rect key="frame" x="75" y="39" width="237" height="21"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="237" id="cD6-pO-72o"/>
+                            <constraint firstAttribute="height" constant="21" id="uQm-MO-Ywn"/>
                         </constraints>
                         <fontDescription key="fontDescription" name="GothamRounded-Light" family="Gotham Rounded" pointSize="11"/>
                         <nil key="highlightedColor"/>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="cD6-pO-72o"/>
-                            </mask>
-                        </variation>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="aOo-vc-KOf">
                         <rect key="frame" x="20" y="16" width="47" height="47"/>
@@ -65,23 +60,18 @@
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="trailingMargin" secondItem="EjD-IM-oCa" secondAttribute="trailing" constant="104" id="1nA-zS-1Q8"/>
-                    <constraint firstItem="obs-re-Qcr" firstAttribute="leading" secondItem="aOo-vc-KOf" secondAttribute="trailing" constant="8" id="4Jn-hZ-wKv"/>
                     <constraint firstItem="aOo-vc-KOf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="12" id="Dyo-9C-e1j"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="obs-re-Qcr" secondAttribute="trailing" id="K67-Q5-HxQ"/>
-                    <constraint firstItem="obs-re-Qcr" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="32" id="OII-2t-sIf"/>
+                    <constraint firstItem="obs-re-Qcr" firstAttribute="top" secondItem="EjD-IM-oCa" secondAttribute="bottom" constant="2" id="KcB-Ik-N42"/>
                     <constraint firstItem="EjD-IM-oCa" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="67" id="Rw4-e0-xrh"/>
                     <constraint firstItem="EjD-IM-oCa" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="12" id="Rzl-qm-PJs"/>
-                    <constraint firstItem="obs-re-Qcr" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="25" id="TAX-mc-dOv"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="obs-re-Qcr" secondAttribute="bottom" constant="4" id="YiW-oz-qLM"/>
                     <constraint firstItem="EjD-IM-oCa" firstAttribute="leading" secondItem="aOo-vc-KOf" secondAttribute="trailing" constant="8" id="e02-W2-mXc"/>
-                    <constraint firstItem="obs-re-Qcr" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="67" id="k8t-7P-745"/>
                     <constraint firstItem="aOo-vc-KOf" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="8" id="wAP-Jz-j42"/>
+                    <constraint firstItem="obs-re-Qcr" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="y3A-ft-965"/>
+                    <constraint firstItem="obs-re-Qcr" firstAttribute="leading" secondItem="aOo-vc-KOf" secondAttribute="trailing" constant="8" id="zLs-2E-qwk"/>
                 </constraints>
                 <variation key="default">
                     <mask key="constraints">
                         <exclude reference="e02-W2-mXc"/>
-                        <exclude reference="4Jn-hZ-wKv"/>
-                        <exclude reference="TAX-mc-dOv"/>
                     </mask>
                 </variation>
             </tableViewCellContentView>
@@ -89,6 +79,7 @@
                 <outlet property="imgView" destination="aOo-vc-KOf" id="DDX-CX-0y1"/>
                 <outlet property="lblDetail" destination="obs-re-Qcr" id="qiy-FV-try"/>
                 <outlet property="lblHeader" destination="EjD-IM-oCa" id="7nK-r9-cSh"/>
+                <outlet property="suggestedHt" destination="uQm-MO-Ywn" id="S7a-hc-c79"/>
             </connections>
             <point key="canvasLocation" x="424" y="248"/>
         </tableViewCell>
